--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>E-Ticket</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,10 +11,45 @@
   </head>
   <body>
       <div class="pageframe">
-        <nav class="navbar navbar-dark">
-          <h1 class="display-3">logo</h1>
-        </nav>
+        <div class="side-navbar">
+          <h1 class="display-3">Logo</h1>
+        </div>
+        <div>
+          <nav class="frame-navbar">
+            <h1 class="display-3">logo</h1>
+            <div class="nav nav-tabs">
+              <div class="nav-item">
+                <a href="#" class="nav-link">Hello</a>
+              </div>
+            </div>
+          </nav>
+        </div>
       </div>
+      <section class="row">
+          <div class="card col-md-3 col-sm-12 mr-md-3">
+            <img class="card-img-top" alt="">
+            <div class="card-body">
+              <h4 class="card-title">Title</h4>
+              <p class="card-text">Text</p>
+            </div>
+          </div>
+          
+          <div class="card col-md-3 col-sm-12 mr-md-3">
+            <img class="card-img-top" alt="">
+            <div class="card-body">
+              <h4 class="card-title">Title</h4>
+              <p class="card-text">Text</p>
+            </div>
+          </div>
+
+          <div class="card col-md-3 col-sm-12 mr-md-3">
+            <img class="card-img-top" alt="">
+            <div class="card-body">
+              <h4 class="card-title">Title</h4>
+              <p class="card-text">Text</p>
+            </div>
+          </div>
+        </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
