--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -17,7 +17,7 @@
         <div>
           <nav class="frame-navbar">
             <h1 class="display-3">logo</h1>
-            <div class="nav nav-tabs">
+            <div class="nav nav-tabs float-right">
               <div class="nav-item">
                 <a href="#" class="nav-link">Hello</a>
               </div>
