Change frame height

--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -15,18 +15,16 @@
           <h1 class="display-3">Logo</h1>
         </div>
         <div>
-          <nav class="frame-navbar">
-            <h1 class="display-3">logo</h1>
-            <div class="nav nav-tabs float-right">
-              <div class="nav-item">
-                <a href="#" class="nav-link">Hello</a>
-              </div>
-            </div>
+          <nav class="frame-navbar navbar">
+            <button class="btn" type="button" data-toggle="collapse" data-target="#contentId" aria-expanded="false" aria-controls="contentId">
+                Show
+            </button>
+            
           </nav>
         </div>
       </div>
       <section class="row">
-          <div class="card col-md-3 col-sm-12 mr-md-3">
+          <div class="card col-md-3 col-sm-12 ml-md-3 mr-md-3 mt-sm-3">
             <img class="card-img-top" alt="">
             <div class="card-body">
               <h4 class="card-title">Title</h4>
@@ -34,7 +32,7 @@
             </div>
           </div>
           
-          <div class="card col-md-3 col-sm-12 mr-md-3">
+          <div class="card col-md-3 col-sm-12 mr-md-3 mt-sm-3">
             <img class="card-img-top" alt="">
             <div class="card-body">
               <h4 class="card-title">Title</h4>
@@ -42,7 +40,7 @@
             </div>
           </div>
 
-          <div class="card col-md-3 col-sm-12 mr-md-3">
+          <div class="card col-md-3 col-sm-12 mr-md-3 mt-sm-3">
             <img class="card-img-top" alt="">
             <div class="card-body">
               <h4 class="card-title">Title</h4>
