change some nav

--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -16,10 +16,14 @@
         </div>
         <div>
           <nav class="frame-navbar navbar">
-            <button class="btn" type="button" data-toggle="collapse" data-target="#contentId" aria-expanded="false" aria-controls="contentId">
-                Show
-            </button>
-            
+            <div class="container-fluid">
+              <p class="text-center display-3">Hoho</p>
+            </div>
+            <ul class="nav-tabs nav">
+              <li class="nav-item">
+                <a href="#" class="nav-link">Sports</a>
+              </li>
+            </ul>
           </nav>
         </div>
       </div>
