Make a mobile friendly

--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="../Css/main.css" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.csse">
   </head>
   <body>
       <div class="pageframe">
@@ -15,18 +16,18 @@
           <h1 class="display-3">Logo</h1>
         </div>
         <div>
-<<<<<<< HEAD
-          <nav class="frame-navbar">
-            <h1 class="display-3">logo</h1>
-            <div class="nav nav-tabs">
-              <div class="nav-item">
-                <a href="#" class="nav-link">Hello</a>
-              </div>
-=======
           <nav class="frame-navbar navbar">
             <div class="container-fluid">
-              <p class="text-center display-3">Hoho</p>
->>>>>>> e3f520b96c5074d1edb7bf0a5f2dff2cd1f703e0
+              <div class="container justify-content-center">
+                <p class="text-center display-3">Hoho</p>
+              </div>
+              <div class="justify-content-end">
+                <h2>
+                  <a href="#" class="option">
+                    <i class="fa fa-bars" id="option-icon"></i>
+                  </a>
+                </h2>
+              </div>
             </div>
             <ul class="nav-tabs nav">
               <li class="nav-item">
@@ -65,6 +66,7 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src='../Javascript/main.js'></script>
+    <script src="https://use.fontawesome.com/81c2cd76b6.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   </body>
