--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -8,12 +8,22 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="../Css/main.css" type="text/css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.csse">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
       <div class="pageframe">
         <div class="side-navbar">
-          <h1 class="display-3">Logo</h1>
+          <div class="row text-center">
+            <h3 class="col-md-12">User Name</h3>
+          </div>
+          <div class="row">
+            <div class='col-md-12 text-center'>
+              <img src="user1.jpg" alt="" class="user-image img-thumbnail">
+            </div>
+          </div>
+          <div class="row">
+
+          </div>
         </div>
         <div>
           <nav class="frame-navbar navbar">
