add a user panel

--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -13,16 +13,21 @@
   <body>
       <div class="pageframe">
         <div class="side-navbar">
-          <div class="row text-center">
-            <h3 class="col-md-12">User Name</h3>
-          </div>
           <div class="row">
             <div class='col-md-12 text-center'>
-              <img src="user1.jpg" alt="" class="user-image img-thumbnail">
+              <img src="user1.jpg" alt="" class="user-image img-fluid">
             </div>
           </div>
-          <div class="row">
-
+          <div class="row text-center">
+            <h3 class="col-md-12" id='user-name'>User Name</h3>
+          </div>
+          <ul class="list-group">
+            <li class="list-group-item">My Profile</li>
+            <br>
+            <li class="list-group-item">My Event</li>
+            <br>
+            <li class="list-group-item">Log out</li>
+          </ul>
           </div>
         </div>
         <div>
