--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -21,13 +21,13 @@
           <div class="row text-center">
             <h3 class="col-md-12" id='user-name'>User Name</h3>
           </div>
-          <ul class="list-group">
-            <li class="list-group-item">My Profile</li>
+          <div class="list-group">
+            <a href='#' class="list-group-item list-group-item-action">My Profile</a>
             <br>
-            <li class="list-group-item">My Event</li>
+            <a href='#' class="list-group-item list-group-item-action">My Event</a>
             <br>
-            <li class="list-group-item">Log out</li>
-          </ul>
+            <a href='#' class="list-group-item list-group-item-action">Log out</a>
+          </div>
           </div>
         </div>
         <div>
