change user panel

--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -21,16 +21,15 @@
           <div class="row text-center">
             <h3 class="col-md-12" id='user-name'>User Name</h3>
           </div>
-          <div class="list-group">
-            <a href='#' class="list-group-item list-group-item-action">My Profile</a>
+          <div class="user-panel text-center">
+            <a href="#" class="user-panel-1">My profile</a>
             <br>
-            <a href='#' class="list-group-item list-group-item-action">My Event</a>
+            <a href="#" class="user-panel-2">My Event</a>
             <br>
-            <a href='#' class="list-group-item list-group-item-action">Log out</a>
-          </div>
+            <a href="#" class="user-panel-3">Log out</a>
           </div>
         </div>
-        <div>
+      </div>
           <nav class="frame-navbar navbar">
             <div class="container-fluid">
               <div class="container justify-content-center">
