--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -13,18 +13,18 @@
   <body>
       <div class="pageframe">
         <div class="side-navbar">
-          <div class="row">
-            <div class='col-md-12 text-center'>
-              <img src="user1.jpg" alt="" class="user-image img-fluid">
+          <div class="container">
+            <div class="row">
+              <div class='col-md-12 text-center'>
+                <img src="user1.jpg" alt="" class="user-image img-fluid">
+              </div>
             </div>
-          </div>
-          <div class="row text-center">
-            <h3 class="col-md-12" id='user-name'>User Name</h3>
-          </div>
-          <div class="user-panel text-center">
-            <a href="#" class="user-panel-1">My profile</a>
-            <a href="#" class="user-panel-2">My Event</a>
-            <a href="#" class="user-panel-3">Log out</a>
+            <div class="user-panel text-center">
+              <h4 class="user-panel-name">My Name</h4>
+              <a href="#" class="user-panel-1">My profile</a>
+              <a href="#" class="user-panel-2">My Event</a>
+              <a href="#" class="user-panel-3">Log out</a>
+            </div>
           </div>
         </div>
       </div>
@@ -50,7 +50,7 @@
         </div>
       </div>
       <section class="row">
-          <div class="card col-md-3 col-sm-12 ml-md-3 mr-md-3 mt-sm-3">
+          <div class="card col-md-3 col-sm-12 f-card">
             <img class="card-img-top" alt="">
             <div class="card-body">
               <h4 class="card-title">Title</h4>
@@ -58,7 +58,7 @@
             </div>
           </div>
           
-          <div class="card col-md-3 col-sm-12 mr-md-3 mt-sm-3">
+          <div class="card col-md-3 col-sm-12">
             <img class="card-img-top" alt="">
             <div class="card-body">
               <h4 class="card-title">Title</h4>
@@ -66,14 +66,16 @@
             </div>
           </div>
 
-          <div class="card col-md-3 col-sm-12 mr-md-3 mt-sm-3">
+          <div class="card col-md-3 col-sm-12">
             <img class="card-img-top" alt="">
             <div class="card-body">
               <h4 class="card-title">Title</h4>
               <p class="card-text">Text</p>
             </div>
           </div>
-        </section>
+
+      </section>
+        
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
