--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -33,9 +33,9 @@
               <div class="container justify-content-center">
                 <p class="text-center display-3">Hoho</p>
               </div>
-              <div class="justify-content-end">
+              <div class="option justify-content-end">
                 <h2>
-                  <a href="#" class="option">
+                  <a href="#">
                     <i class="fa fa-bars" id="option-icon"></i>
                   </a>
                 </h2>
