--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -44,7 +44,13 @@
             </div>
             <ul class="nav-tabs nav">
               <li class="nav-item">
-                <a href="#" class="nav-link">Sports</a>
+                <a href="#" class="nav-link board-panel" data-board='sport'>Sports</a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link board-panel" data-board='entertain'>Entertainment</a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link board-panel" data-board='tech'>Technology</a>
               </li>
             </ul>
           </nav>
