--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -28,21 +28,6 @@
             </div>
           </div>
         </div>
-        <div class="collapse">
-          <div class="container">
-            <div class="row">
-              <div class='col-md-12 text-center'>
-                <img src="user1.jpg" alt="" class="user-image img-fluid">
-              </div>
-            </div>
-            <div class="user-panel text-center">
-              <h4 class="user-panel-name">My Name</h4>
-              <a href="#" class="user-panel-1">My profile</a>
-              <a href="#" class="user-panel-2">My Event</a>
-              <a href="#" class="user-panel-3">Log out</a>
-            </div>
-          </div>
-        </div>
       </div>
           <nav class="frame-navbar navbar">
             <div class="container-fluid">
@@ -51,7 +36,7 @@
               </div>
               <div class="option justify-content-end">
                 <h2>
-                  <a href="#" class="side-nav-toggle" onclick="opennav();">
+                  <a href="#" class="side-nav-toggle" data-toggle="collapse" data-target='#user-collapse'>
                     <i class="fa fa-bars" id="option-icon"></i>
                   </a>
                 </h2>
@@ -73,6 +58,21 @@
       </div>
       <div class="container">
         <section class="row card-control justify-content-center">
+            <div class="collapse col-sm-12" id="user-collapse">
+              <div class="container">
+                <div class="row">
+                  <div class='col-md-12 text-center'>
+                    <img src="user1.jpg" alt="" class="user-image img-fluid">
+                  </div>
+                </div>
+                <div class="user-panel text-center">
+                  <h4 class="user-panel-name">My Name</h4>
+                  <a href="#" class="user-panel-1">My profile</a>
+                  <a href="#" class="user-panel-2">My Event</a>
+                  <a href="#" class="user-panel-3">Log out</a>
+                </div>
+              </div>
+            </div>
             <div class="card col-lg-3 col-md-12 col-sm-12">
               <img class="card-img-top" alt="">
               <div class="card-body">
