--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -52,6 +52,9 @@
               <li class="nav-item">
                 <a href="#" class="nav-link board-panel" data-board='tech'>Technology</a>
               </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link board-panel" data-board='Motorsport'>Motorsport</a>
+              </li>
             </ul>
           </nav>
         </div>
