change side navbar

--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -20,12 +20,12 @@
                 <img src="user1.jpg" alt="" class="user-image img-fluid">
               </div>
             </div>
-            <div class="user-panel text-center">
-              <h4 class="user-panel-name">My Name</h4>
-              <a href="#" class="user-panel-1">My profile</a>
-              <a href="#" class="user-panel-2">My Event</a>
-              <a href="#" class="user-panel-3">Log out</a>
-            </div>
+            <ul class="user-panel">
+              <li href='#' class="user-panel-name">User Name</li>
+              <li href="#" class="user-panel-1"><i class="fa fa-user-o"> My Profile</i></li>
+              <li href="#" class="user-panel-2"><i class="fa fa-star"> My Event</i></li>
+              <li href="#" class="user-panel-3"><i class="fa fa-sign-out"> Log out</i></li>
+            </ul>
           </div>
         </div>
       </div>
