--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -22,9 +22,9 @@
             </div>
             <ul class="user-panel">
               <li href='#' class="user-panel-name">User Name</li>
-              <li href="#" class="user-panel-1"><i class="fa fa-user-o"> My Profile</i></li>
-              <li href="#" class="user-panel-2"><i class="fa fa-star"> My Event</i></li>
-              <li href="#" class="user-panel-3"><i class="fa fa-sign-out"> Log out</i></li>
+              <li href="#" class="user-panel-1"><a href="#"><i class="fa fa-user-o"> My Profile</i></a></li>
+              <li href="#" class="user-panel-2"><a href="#"><i class="fa fa-star"> My Event</i></a></li>
+              <li href="#" class="user-panel-3"><a href="#"><i class="fa fa-sign-out"> Log out</i></a></li>
             </ul>
           </div>
         </div>
