--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -31,9 +31,7 @@
       </div>
           <nav class="frame-navbar navbar">
             <div class="container-fluid">
-              <div class="container justify-content-center">
-                <p class="text-center display-3">Hoho</p>
-              </div>
+              <H1 class="text-center">IT-Event</H1>
               <div class="option justify-content-end">
                 <h2>
                   <a href="#" class="side-nav-toggle" data-toggle="collapse" data-target='#user-collapse'>
@@ -42,27 +40,28 @@
                 </h2>
               </div>
             </div>
-            <ul class="nav-tabs nav">
-              <li class="nav-item">
-                <a href="#" class="nav-link board-panel" data-board='sport'>Sports</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link board-panel" data-board='entertain'>Entertainment</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link board-panel" data-board='tech'>Technology</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link board-panel" data-board='Motorsport'>Motorsport</a>
-              </li>
-            </ul>
+            <div class="container-fluid">
+              <ul class="nav-tabs nav">
+                <li class="nav-item">
+                  <a href="#" class="nav-link board-panel" data-board='sport'>Sports</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#" class="nav-link board-panel" data-board='entertain'>Entertainment</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#" class="nav-link board-panel" data-board='tech'>Technology</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#" class="nav-link board-panel" data-board='Motorsport'>Motorsport</a>
+                </li>
+              </ul>
+            </div>
           </nav>
         </div>
       </div>
       <div class="container">
         <section class="row card-control justify-content-center">
             <div class="collapse col-sm-12" id="user-collapse">
-              <div class="container">
                 <div class="row">
                   <div class='col-md-12 text-center'>
                     <img src="user1.jpg" alt="" class="user-image img-fluid">
@@ -74,7 +73,6 @@
                   <a href="#" class="user-panel-2">My Event</a>
                   <a href="#" class="user-panel-3">Log out</a>
                 </div>
-              </div>
             </div>
             <div class="card col-lg-3 col-md-12 col-sm-12">
               <img class="card-img-top" alt="">
