Fixed left profile

--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -20,12 +20,14 @@
                 <img src="user1.jpg" alt="" class="user-image img-fluid">
               </div>
             </div>
-            <ul class="user-panel">
-              <li href='#' class="user-panel-name">User Name</li>
-              <li href="#" class="user-panel-1"><a href="#"><i class="fa fa-user-o"> My Profile</i></a></li>
-              <li href="#" class="user-panel-2"><a href="#"><i class="fa fa-star"> My Event</i></a></li>
-              <li href="#" class="user-panel-3"><a href="#"><i class="fa fa-sign-out"> Log out</i></a></li>
-            </ul>
+            <div class="container">
+              <div class="user-panel justify-content-center">
+                <h3 class="user-panel-name">User Name</h3>
+                <p href="#" class="user-panel-1"><a href="#"><i class="fa fa-user-o"> My Profile</i></a></p>
+                <p href="#" class="user-panel-2"><a href="#"><i class="fa fa-star"> My Event</i></a></p>
+                <p href="#" class="user-panel-3"><a href="#"><i class="fa fa-sign-out"> Log out</i></a></p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
