--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -43,25 +43,27 @@
               </div>
             </div>
             <div class="container-fluid">
-              <ul class="nav-tabs nav">
-                <li class="nav-item">
-                  <a href="#" class="nav-link board-panel" data-board='sport'>Sports</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#" class="nav-link board-panel" data-board='entertain'>Entertainment</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#" class="nav-link board-panel" data-board='tech'>Technology</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#" class="nav-link board-panel" data-board='Motorsport'>Motorsport</a>
-                </li>
-              </ul>
+              <div class="menu">
+                <ul class="nav-tabs nav">
+                  <li class="nav-item" id="menu-item-1">
+                    <a href="#" class="nav-link board-panel" data-board='sport'>Sports</a>
+                  </li>
+                  <li class="nav-item" id="menu-item-2">
+                    <a href="#" class="nav-link board-panel" data-board='entertain'>Entertainment</a>
+                  </li>
+                  <li class="nav-item" id="menu-item-3">
+                    <a href="#" class="nav-link board-panel" data-board='tech'>Technology</a>
+                  </li>
+                  <li class="nav-item" id="menu-item-4">
+                    <a href="#" class="nav-link board-panel" data-board='Motorsport'>Motorsport</a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </nav>
         </div>
       </div>
-      <div class="container">
+      <div class="container ">
         <section class="row card-control justify-content-center">
             <div class="collapse col-sm-12" id="user-collapse">
                 <div class="row">
