--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../Css/main.css" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body>
+  <body style="background-image: BackgroundWeb2.png">
     <div>
       <div class="pageframe">
         <div class="side-navbar-dsktop">
