--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../Css/main.css" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body style="background-image: BackgroundWeb2.png">
+  <body>
     <div>
       <div class="pageframe">
         <div class="side-navbar-dsktop">
@@ -79,10 +79,10 @@
                 </div>
             </div>
             <div class="card col-lg-3 col-md-12 col-sm-12">
-              <img class="card-img-top" alt="">
+              <img class="card-img-top dsk-size" alt="" src="http://imgfill.com/125x125">
               <div class="card-body">
                 <h4 class="card-title">Title</h4>
-                <p class="card-text">Text</p>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sed unde reiciendis ducimus? Minus in vel ab voluptates, porro quaerat!</p>
               </div>
             </div>
             
