--- a/Frontend folder/Html/index.html
+++ b/Frontend folder/Html/index.html
@@ -79,11 +79,13 @@
                 </div>
             </div>
             <div class="card col-lg-3 col-md-12 col-sm-12">
-              <img class="card-img-top dsk-size" alt="" src="http://imgfill.com/125x125">
-              <div class="card-body">
-                <h4 class="card-title">Title</h4>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sed unde reiciendis ducimus? Minus in vel ab voluptates, porro quaerat!</p>
-              </div>
+              <a href="event.html">
+                <img class="card-img-top dsk-size" alt="" src="http://imgfill.com/125x125">
+                <div class="card-body">
+                  <h4 class="card-title">Title</h4>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sed unde reiciendis ducimus? Minus in vel ab voluptates, porro quaerat!</p>
+                </div>
+              </a>
             </div>
             
             <div class="card col-lg-3 col-md-12 col-sm-12">
