--- a/Frontend folder/Html/index-1.html
+++ b/Frontend folder/Html/index-1.html
@@ -11,17 +11,17 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
+    <div class="content">
       <div class="side-navbar">
 
       </div>
       <div class="main">
-        <div class="main-navbar">
-            
-        </div>
+
       </div>
       <footer class="footer">
 
       </footer>
+    </div>
     <!-- Optional JavaScript -->
     <script>
       function openPage(pageName,elmnt,color) {
