--- a/Frontend folder/Html/index-1.html
+++ b/Frontend folder/Html/index-1.html
@@ -37,10 +37,10 @@
       <div class="main dsktop">
         <!--Content selector button-->
         <div class="main-pageselector">
-          <button class="tablink" onclick="openPage('Home', this, 'red')">Home</button>
-          <button class="tablink" onclick="openPage('News', this, 'green')" id="defaultOpen">News</button>
-          <button class="tablink" onclick="openPage('Contact', this, 'blue')">Contact</button>
-          <button class="tablink" onclick="openPage('About', this, 'orange')">About</button>
+          <button class="tablink" onclick="openPage('Home', this, '#8EADBD')">Home</button>
+          <button class="tablink" onclick="openPage('News', this, '#8EADBD')" id="defaultOpen">News</button>
+          <button class="tablink" onclick="openPage('Contact', this, '#8EADBD')">Contact</button>
+          <button class="tablink" onclick="openPage('About', this, '#8EADBD')">About</button>
           <!--content page-->
             <div id="Home" class="tabcontent">
               <h3>Home</h3>
@@ -78,10 +78,10 @@
             <a href="Log out"><i class="fa fa-sign-out"></i>Log Out</a>
           </div>
           <div class="main-content-mobile-selector">
-            <button class="tablink" onclick="openPage('Home-mobile', this, '#8EAEBD')">Home</button>
-            <button class="tablink" onclick="openPage('News-mobile', this, '#8EAEBD')" id="defaultOpen">News</button>
-            <button class="tablink" onclick="openPage('Contact-mobile', this, '#8EAEBD')" >Contact</button>
-            <button class="tablink" onclick="openPage('About-mobile', this, '#8EAEBD')">About</button>
+            <button class="tablink" onclick="openPage('Home-mobile', this, '#30415D')">Home</button>
+            <button class="tablink" onclick="openPage('News-mobile', this, '#30415D')" id="defaultOpen">News</button>
+            <button class="tablink" onclick="openPage('Contact-mobile', this, '#30415D')" >Contact</button>
+            <button class="tablink" onclick="openPage('About-mobile', this, '#30415D')">About</button>
           </div>
           <div class="main-content-mobile-page">
             <div id="Home-mobile" class="tabcontent">
