--- a/Frontend folder/Html/index-1.html
+++ b/Frontend folder/Html/index-1.html
@@ -65,9 +65,11 @@
       </div>
     </div>
     <div class="content mobile">
+      <!--Menu button + navbar-->
       <div class="head-navbar">
         <a href="#" onclick="openNav()"><i class="fa fa-bars"></i></a>
       </div>
+      <!--Side menu-->
       <div class="main-content-mobile">
           <div id="mobile-menu" class="main-content-mobile-menu">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -77,12 +79,14 @@
             <a href="My Event"><i class="fa fa-star-o"></i>My Event</a>
             <a href="Log out"><i class="fa fa-sign-out"></i>Log Out</a>
           </div>
+          <!--Main button to select a page-->
           <div class="main-content-mobile-selector">
             <button class="tablink" onclick="openPage('Home-mobile', this, '#30415D')">Home</button>
             <button class="tablink" onclick="openPage('News-mobile', this, '#30415D')" id="defaultOpen">News</button>
             <button class="tablink" onclick="openPage('Contact-mobile', this, '#30415D')" >Contact</button>
             <button class="tablink" onclick="openPage('About-mobile', this, '#30415D')">About</button>
           </div>
+          <!--Page after button was clicked-->
           <div class="main-content-mobile-page">
             <div id="Home-mobile" class="tabcontent">
               <h3>Home</h3>
